hard-gists/5466822/run.log
=== Docker Run Log for 5466822 ===
Started at: Mi 29. Okt 15:42:27 CET 2025

[2025-10-29 15:42:28] START: Running container for 5466822
[2025-10-29 15:42:28] SUCCESS: Container cfa18f35b69ec60625687ccd368c32b189857163042af6735c838d88ff9a0b8b started for 5466822
=== Container logs for 5466822 ===
  File "/snippet.py", line 48
    print "Updating:",domID
    ^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 5466822 ===
[2025-10-29 15:42:30] INFO: Container cfa18f35b69ec60625687ccd368c32b189857163042af6735c838d88ff9a0b8b has stopped
